--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Django settings
 SECRET_KEY=your-secret-key-here
 DEBUG=False
-ALLOWED_HOSTS = config('localhost,127.0.0.1', default='localhost,127.0.0.1,.onrender.com').split(',')
+ALLOWED_HOSTS = ('localhost,127.0.0.1,esa-ku-l2mt.onrender.com,.onrender.com').split(',')
 
 # Database settings
 DATABASE_URL=sqlite:///db.sqlite3
