Update project for Render deployment with fixed build.sh executable permission

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Django Settings
 DJANGO_DEBUG=True
-SECRET_KEY=your-secret-key-here
+SECRET_KEY='django-insecure-tea_sg2x!%srgbm^(_#o&&yi$c16d1(6r45xb)f8qhh9e-czn%'
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,esa-ku-l2mt.onrender.com,.onrender.com
 
