--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ paypalrestsdk==1.13.1
 
 # Development Tools
 python-dotenv==1.0.1
+python-decouple==3.8
 django-debug-toolbar==4.3.0
+dj-database-url==2.1.0
 
 # Production
 gunicorn==21.2.0
