--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,8 @@ typeguard==2.13.3
 urllib3==2.0.7
 django-debug-toolbar==4.2.0
 django-browser-reload==1.12.0
-dj-database-url=2.3.0
+dj-database-url==2.3.0
+psycopg2-binary==2.9.10 # PostgreSQL adapter for Python
 
 # Security
 certifi==2023.11.17
