--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-
-# Core Django and Dependencies
 Django==5.0.8
 asgiref==3.8.0
 sqlparse==0.5.0
@@ -15,12 +13,19 @@ PyJWT==2.8.0
 
 # Database
 dj-database-url==2.3.0
+psycopg2-binary==2.9.10
+django-extensions==3.2.3
+django-filter==24.2
+django-redis==5.3.0
+redis==4.5.0
 
 # Image Processing
 Pillow==10.2.0
 
+# Date Utilities
+python-dateutil==2.9.0.post0
+
 # Payment Processing
-#django-mpesa==2.0.14  the termial "django-mpesa" is not available
 paypalrestsdk==1.13.1
 
 # Development Tools
@@ -34,8 +39,6 @@ urllib3==2.0.7
 django-debug-toolbar==4.2.0
 django-browser-reload==1.12.0
 
-psycopg2-binary==2.9.10 # PostgreSQL adapter for Python
-
 # Security
 certifi==2023.11.17
 cffi==1.16.0
@@ -48,8 +51,23 @@ pycparser==2.21
 gunicorn==21.2.0
 whitenoise==6.9.0
 
-# Additional Packages
-redis==4.5.0
-django-redis==5.3.0
+# Additional Django Packages
+django-cors-headers==4.3.1
+django-storages==1.14.2
+django-anymail==10.2
+djangorestframework==3.15.1
+django-rest-auth==0.9.5
+django-admin-interface==0.28.2
+django-import-export==3.3.8
+django-cleanup==8.0.0
+django-q==1.4.1
+django-ckeditor==6.5.1
+django-taggit==5.0.1
+django-safedelete==1.3.2
+django-simple-history==3.4.3
+django-guardian==2.4.0
+django-axes==6.0.0
+django-health-check==3.17.0
+django-sslserver==0.22
+django-constance==2.10.0
 markdown==3.5.1
-
