--- a/render.yaml
+++ b/render.yaml
@@ -29,6 +29,8 @@ services:
         value: sandbox
       - key: PAYPAL_MODE
         value: sandbox
+      - key: PYTHONPATH
+        value: "/opt/render/project/src"
 
 databases:
   - name: esa-db
