--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ PyJWT==2.8.0
 
 # Database
 dj-database-url==2.3.0
-psycopg2-binary==2.9.9
+#psycopg2-binary==2.9.9
 
 # Image Processing - Updated for Python 3.13 compatibility
 Pillow==10.4.0
