fixed it even more

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Django Settings
-DJANGO_DEBUG=True
-SECRET_KEY=your-secret-key-here
+DJANGO_DEBUG=False
+SECRET_KEY=your-secret-key-here-)(*&^%$#@!1234567890
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,.onrender.com
 
@@ -60,3 +60,5 @@ MPESA_REFERENCE=ESA-KU
 # Update callback URL to handle all payment types
 MPESA_CALLBACK_URL=http://127.0.0.1:8000/payment/mpesa/callback/
 MPESA_SIMULATE_IN_DEV=True
+
+DEBUG=False
